CORREÇÕES DAS EMPRESAS

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/caalga/logo.png" rel="apple-touch-icon">
+    <link href="assets/img/caalga/favorite icon.png" rel="icon">
+    <link href="assets/img/caalga/closure logo.png" rel="icon">
 
     <!-- Google Fonts -->
     <link
@@ -308,7 +308,7 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">Todos</li>
+                            <!--<li data-filter="*" class="filter-active">Todos</li>-->
                             <li data-filter=".filter-app">Caalga Pack</li>
                             <li data-filter=".filter-card">Caalga Soluções Industriais</li>
                             <li data-filter=".filter-web">Transport System</li>
@@ -338,35 +338,7 @@
                             </div>
                         </div>
                     </div>
-
-                    <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-wrap">
-                            <img src="foto" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Pack 2</h4>
-                                <p>Web</p>
-                                <div class="portfolio-links">
-                                    <a href="foto" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-pack.html.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
-
-                    <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-wrap">
-                            <img src="foto" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Pack 3</h4>
-                                <p>App</p>
-                                <div class="portfolio-links">
-                                    <a href="foto" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-pack.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                -->
+                
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
                             <img src="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png" class="img-fluid"
@@ -385,123 +357,21 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/caalga solucoes industriais - aplicador adesivo 1.png"
-                                class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Soluções Industriais 2</h4>
-                                <p>Card</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/caalga solucoes industriais - aplicador adesivo 1.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-insdustrial.html" title="More Details"><i
-                                            class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/caalga solucoes industriais - CILINDRO DE PINÇAS ALFA.png"
-                                class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Soluções Industriais 3</h4>
-                                <p>Web</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/caalga soluções industriais - CILINDRO ALFA EXPLOSÃO.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-insdustrial.html" title="More Details"><i
-                                            class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/estrela universella com trava dubai 275ml 03.png"
-                                class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Soluções Industriais 4</h4>
-                                <p>Web</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/estrela universella com trava dubai 275ml 03.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-insdustrial.html" title="More Details"><i
-                                            class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/Kit  dado bier completo 275ml.png" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Soluções Industriais 5</h4>
-                                <p>Web</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/Kit  dado bier completo 275ml.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-insdustrial.html" title="More Details"><i
-                                            class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--TESTE ACIMA-->
-
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/" class="img-fluid" alt="">
+                            <img src="assets/img/caalga/Kit  dado bier completo 275ml.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Transport Systems 1</h4>
                                 <p>App</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/" data-gallery="portfolioGallery"
+                                    <a href="assets/img/caalga/Kit  dado bier completo 275ml.png" data-gallery="portfolioGallery"
                                         class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="portfolio-details-transport.html" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/CILINDRO DE PINÇAS ALFA.png" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Transport Systems 2</h4>
-                                <p>Card</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/CILINDRO DE PINÇAS ALFA.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/cxa dado bier.png" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Transport Systems 3</h4>
-                                <p>Card</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/cxa dado bier.png" data-gallery="portfolioGallery"
-                                        class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-ag">
                         <div class="portfolio-wrap">
@@ -514,48 +384,14 @@
                                     <a href="assets/img/caalga/caalga agro - Manifolde Hidraulico.png"
                                         data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i
                                             class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-ag">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/caalga/Manifolde Hidraulico Caalga Agro.png" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Caalga Agro 2</h4>
-                                <p>App</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/caalga/Manifolde Hidraulico Caalga Agro.png"
-                                        data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i
-                                            class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details-agro.html" title="More Details"><i
-                                            class="bx bx-link"></i></a>
+                                    <a href="portfolio-details-agro.html" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ag">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/caalga/Rosqueador Chines Closure Systems.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Caalga Agro 3</h4>
-                            <p>css 1</p>
-                            <div class="portfolio-links">
-                                <a href="assets/img/caalga/Rosqueador Chines Closure Systems.png"
-                                    data-gallery="portfolioGallery" class="portfolio-lightbox" title="css 1"><i
-                                        class="bx bx-plus"></i></a>
-                                <a href="portfolio-details-closure.html" title="More Details"><i
-                                        class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-            </div>
+        </div>
             <!-- </div>-->
             <!--</section>-- End Portfolio Section -->
 
