--- a/portfolio-details-agro.html
+++ b/portfolio-details-agro.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/caalga/favorite icon.png" rel="icon">
+  <link href="assets/img/caalga/logo caalga agro.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -44,7 +44,7 @@
         <div class="logo">
           <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
           <!-- Uncomment below if you prefer to use an image logo -->
-          <a href="index.html"><img src="assets/img/caalga/caalga agro.png" alt="" class="img-fluid"></a>
+          <a href="index.html"><img src="assets/img/caalga/logo caalga agro.png" alt="" class="img-fluid"></a>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -84,11 +84,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga agro.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/caalga/Manifolde Hidraulico Caalga Agro.png" alt="">
+                  <img src="assets/img/caalga/caalga agro - Manifolde Hidraulico.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
@@ -133,22 +129,20 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Caalga</h3>
+            <h3>CAALGA</h3>
             <p>
-              <br>
-              <br>
-              <br><br>
-              <strong> </strong> <br>
-              <strong> </strong> <br>
+              R. Rio Grande do Sul, 1401<br>
+              Toledo - PR<br>
+              Brasil <br><br>
+              <strong>Phone:</strong> +55 (45) 3054-1237<br>
+              <strong>Email:</strong> pcp1@caalga.com.br<br>
             </p>
           </div>
 
-         
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          <br>&copy; Copyright <strong><span>Caalga</span></strong>. All Rights Reserved</br>
           &copy; Copyright <strong><span>Bethany</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
@@ -184,5 +178,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
