--- a/portfolio-details-closure.html
+++ b/portfolio-details-closure.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/caalga/favorite icon.png" rel="icon">
+  <link href="assets/img/caalga/closure logo.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -45,7 +45,7 @@
         <div class="logo">
           <!--<h1 class="text-light"><a href="index.html"><span>Bethany</span></a></h1>-->
           <!-- Uncomment below if you prefer to use an image logo -->
-          <a href="index.html"><img src="assets/img/caalga/caalga pack.png" alt="" class="img-fluid"></a>
+          <a href="index.html"><img src="assets/img/caalga/closure logo.png" alt="" class="img-fluid"></a>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -86,15 +86,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/caalga pack.png" alt="">
+                  <img src="assets/img/caalga/closure system - Rosqueador Chines.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/caalga/embaladora.JPG" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="" alt="">
+                  <img src="assets/img/caalga/closure system - Rosqueador Wada.png" alt="">
                 </div>
 
               </div>
