--- a/portfolio-details-insdustrial.html
+++ b/portfolio-details-insdustrial.html
@@ -81,7 +81,6 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
-
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png" alt="">
                 </div>
@@ -109,6 +108,10 @@
                 <div class="swiper-slide">
                   <img src="assets/img/caalga/caalga soluções industriais - CILINDRO ALFA EXPLOSÃO.png" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/caalga/Recravadora_Caalga_4-removebg-preview.png" alt="">
+                </div>
+               
 
               </div>
               <div class="swiper-pagination"></div>
