--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/caalga/caalga pack - embaladora.JPG" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Caalga Pack 1</h4>
+                                <h4>Caalga Pack</h4>
                                 <p>App</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/caalga/caalga pack - embaladora.JPG"
@@ -344,7 +344,7 @@
                             <img src="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png" class="img-fluid"
                                 alt="">
                             <div class="portfolio-info">
-                                <h4>Caalga Soluções Industriais 1</h4>
+                                <h4>Caalga Soluções Industriais</h4>
                                 <p>Card</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/caalga/caalga solucoes industriais - Aplicador 2.png"
@@ -361,7 +361,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/caalga/Kit  dado bier completo 275ml.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Transport Systems 1</h4>
+                                <h4>Transport Systems</h4>
                                 <p>App</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/caalga/Kit  dado bier completo 275ml.png" data-gallery="portfolioGallery"
@@ -372,13 +372,28 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ccs">
+                      <div class="portfolio-wrap">
+                          <img src="assets/img/caalga/closure system - Rosqueador Wada.png" class="img-fluid" alt="">
+                          <div class="portfolio-info">
+                              <h4>Closure System</h4>
+                              <p>App</p>
+                              <div class="portfolio-links">
+                                  <a href="assets/img/caalga/closure system - Rosqueador Chines.png" data-gallery="portfolioGallery"
+                                      class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                                  <a href="portfolio-details-closure.html" title="More Details"><i class="bx bx-link"></i></a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-ag">
                         <div class="portfolio-wrap">
                             <img src="assets/img/caalga/caalga agro - Manifolde Hidraulico.png" class="img-fluid"
                                 alt="">
                             <div class="portfolio-info">
-                                <h4>Caalga Agro 1</h4>
+                                <h4>Caalga Agro</h4>
                                 <p>Web</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/caalga/caalga agro - Manifolde Hidraulico.png"
@@ -423,7 +438,7 @@
                     <h3>Saul Goodman</h3>
                     <h4>Ceo &amp; Founder</h4>
                   </div> -->
-            </div>
+          
             <!-- End testimonial item 
               
                 <div class="swiper-slide">
