--- a/portfolio-details-agro.html
+++ b/portfolio-details-agro.html
@@ -107,15 +107,13 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Sobre</h2>
+              <h2><!--TEXTO SOBRE--></h2>
               <p>
-                Informações sobre a máquina
+                <!--INFORMAÇÕES SOBRE A EMPRESA-->
               </p>
             </div>
           </div>
-
         </div>
-
       </div>
     </section><!-- End Portfolio Details Section -->
 
