--- a/portfolio-details-closure.html
+++ b/portfolio-details-closure.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/caalga/favorite icon.png" rel="icon">
-  <link href="assets/img/caalga/closure logo.png" rel="icon">
+  <link href="assets/img/caalga/favorite icon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -105,13 +105,13 @@
                 <li><strong>Proprietário</strong>: Matheus Collet</li>
                 <li><strong>Telefone</strong>: (45) 99804-2372 </li>
                 <li><strong>E-mail</strong>: matheuscluminis@hotmail.com</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Sobre</h2>
+              <h2><!--SOBRE--></h2>
               <p>
-                Informações sobre a máquina
+                <!--INFORMAÇÕES SOBRE A PEÇA/MÁQUINA-->
               </p>
             </div>
           </div>
