--- a/portfolio-details-transport.html
+++ b/portfolio-details-transport.html
@@ -108,9 +108,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Sobre</h2>
+              <h2><!--SOBRE--></h2>
               <p>
-                Informações sobre as máquinas
+                <!--SOBRE-->
               </p>
             </div>
           </div>
@@ -140,7 +140,6 @@
             </p>
           </div>
 
-         
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
@@ -165,20 +164,5 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
