--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
                             metalmecânica.
                             <p>
                             <p align="jus">
-                                Com sede própria, fundada em 2014, por Carlos Alberto Gatto, do qual possui mais de 30
+                                Com sede própria, fundada em 2014, possui um equipe com mais de 30
                                 anos de experiência no segmento de máquinas industriais, a empresa atende com total
-                                respeito e compromisso seus clientes. Além disso, as grandes indústrias como: Colônia,
-                                Mineralizadora Prudentópolis, São Jorge - locadora de máquinas e Pritzbier, também
+                                respeito e compromisso seus clientes. Além disso, as grandes indústrias como: Colônia, também
                                 contam com os produtos Caalga.
                             </p>
                             </p>
@@ -184,7 +183,7 @@
                             <p>
                                 Somos apaixonados pelo desenvolvimento e pesquisas em tecnologia para a indústria. Cada
                                 projeto e equipamento são desenvolvidos com planejamento e precição por uma equipe de
-                                engenheiros especializados na criação de produtos mecânicos.
+                                engenheiros especializados na criação de produtos.
                             </p>
                             <div class="text-center">
                                 <!--<a href="#" class="more-btn">Saiba mais <i class="bx bx-chevron-right"></i></a>-->
@@ -259,7 +258,7 @@
                             <div class="col-md-6 d-flex align-items-stretch">
                                 <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
                                     <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                                    <h4><a href="">CNC fresa</a></h4>
+                                    <h4><a href="">Usinagema</a></h4>
                                     <p>Máquinas com tecnologia de ponta e alta precisão de trabalho</p>
                                 </div>
                             </div>
@@ -267,12 +266,12 @@
                             <div class="col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                                 <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
                                     <div class="icon"><i class="bx bx-file"></i></div>
-                                    <h4><a href="">Tornearia</a></h4>
+                                    <h4><a href="">Engenharia</a></h4>
                                     <p>Peças com acabamento de qualidade e dimensões precisas</p>
                                 </div>
                             </div>
 
-                            <div class="col-md-6 d-flex align-items-stretch mt-4">
+                          <!--<div class="col-md-6 d-flex align-items-stretch mt-4">
                                 <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
                                     <div class="icon"><i class="bx bx-tachometer"></i></div>
                                     <h4><a href="">Peças sob medida</a></h4>
@@ -287,7 +286,7 @@
                                     <p>Produzimos inúmeras peças através da fundição de metais</p>
                                 </div>
                             </div>
-
+                          -->
                         </div>
                     </div>
                 </div>
@@ -301,7 +300,7 @@
             <div class="container">
 
                 <div class="section-title" data-aos="fade-left">
-                    <h2>EMPRESAS</h2>
+                    <h2>EMPRESAS &  produtos</h2>
                     <p>Confira nossos parceiros</p>
                 </div>
 
@@ -309,11 +308,14 @@
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
                             <!--<li data-filter="*" class="filter-active">Todos</li>-->
-                            <li data-filter=".filter-app">Caalga Pack</li>
-                            <li data-filter=".filter-card">Caalga Soluções Industriais</li>
-                            <li data-filter=".filter-web">Transport System</li>
-                            <li data-filter=".filter-ag">Caalga Agro</li>
-                            <li data-filter=".filter-ccs">Closure System</li>
+                            <li data-filter=".filter-app"><b>Caalga</b> Pack</li>
+                            <li data-filter=".filter-card"><b>Caalga</b> Soluções Industriais</li>
+                            <li data-filter=".filter-web"><b>Caalga</b> Transport System</li>
+                            <li data-filter=".filter-ag"><b>Caalga</b> Agro</li>
+                            <li data-filter=".filter-ccs"><b>Caalga</b> Closure System</li>
+                            <li data-filter=".filter-cf"><b>Caalga</b> Fillers</li>
+                            <li data-filter=".filter-cl"><b>Caalga</b> labellers</li>
+                            <li data-filter=".filter-cls"><b>Caalga</b> liquidi solutions</li>
                             <!--CAMPO ADICIONAL-->
                         </ul>
                         </ul>
@@ -600,7 +602,7 @@
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
                         <div class="section-title">
-                            <h2>Como prefere falar com a gente?</h2>
+                            <h2>Contatos</h2>
                             <p>Estamos prontos para atende-lo!</p>
                         </div>
                     </div>
