--- a/portfolio-details-agro.html
+++ b/portfolio-details-agro.html
@@ -100,7 +100,7 @@
             <div class="portfolio-info">
               <h3>Peças Agricolas</h3>
               <ul>
-                <li><strong>Proprietário</strong>: Gabriel Gnas</li>
+                <li><strong>Responsável</strong>: Gabriel Gnas</li>
                 <li><strong>Telefone</strong>: (45) 99921-7453 </li>
                 <li><strong>E-mail</strong>: agro@caalga.com.br </li>
                 <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
