--- a/portfolio-details-closure.html
+++ b/portfolio-details-closure.html
@@ -102,7 +102,7 @@
             <div class="portfolio-info">
               <h3>Rosqueadores</h3>
               <ul>
-                <li><strong>Proprietário</strong>: Matheus Collet</li>
+                <li><strong>Responsável</strong>: Matheus Collet</li>
                 <li><strong>Telefone</strong>: (45) 99804-2372 </li>
                 <li><strong>E-mail</strong>: matheuscluminis@hotmail.com</li>
               
