--- a/portfolio-details-insdustrial.html
+++ b/portfolio-details-insdustrial.html
@@ -121,7 +121,7 @@
             <div class="portfolio-info">
               <h3>Embaladoras</h3>
               <ul>
-                <li><strong>Proprietário</strong>: Benilda Matick</li>
+                <li><strong>Responsável</strong>: Benilda Matick</li>
                 <li><strong>Telefone</strong>: 3054-1237</li>
                 <li><strong>E-mail</strong>: adm@caalga.com.br</li>
                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
