--- a/portfolio-details-pack.html
+++ b/portfolio-details-pack.html
@@ -100,7 +100,7 @@
             <div class="portfolio-info">
               <h3>Embaladoras</h3>
               <ul>
-                <li><strong>Proprietário</strong>: Maurício C Gulgelmin</li>
+                <li><strong>Responsável</strong>: Maurício C Gulgelmin</li>
                 <li><strong>Telefone</strong>: (45) 99112-6240 </li>
                 <li><strong>E-mail</strong>: mauricio@caalga.com.br</li>
                <!--<li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>-->
