--- a/portfolio-details-transport.html
+++ b/portfolio-details-transport.html
@@ -102,7 +102,7 @@
             <div class="portfolio-info">
               <h3>Esteiras</h3>
               <ul>
-                <li><strong>Proprietário</strong>: Felipe P Buchi</li>
+                <li><strong>Responsável</strong>: Felipe P Buchi</li>
                 <li><strong>Telefone</strong>: (45) 99964-1983 </li>
                 <li><strong>E-mail</strong>: felipebuche@gmail.com</li>
               </ul>
